Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.6.0-beta1
-
34b99de5b11f45104c72a8f27dda3e8dd73763c5
Description
Doing "Add New ..." on a resource does run the wizard and does create the new file, but it does not add that file to the resource.
Attachments
For Gerrit Dashboard: QTCREATORBUG-15277 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
139689,2 | Wizard: Always prefer context node | 3.6 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |