Wizard: Always prefer context node

Always choose the context node as the project node to add the new
file(s) to. This fixes adding new files to resource files.

Task-number: QTCREATORBUG-15277
Change-Id: I27f6d9dbb402c88413570a8198a005496f103c7b
Reviewed-by: Niels Weber <niels.weber@theqtcompany.com>